# HMOS_vs_gps_pro

./: README.md  build-profile.json5  oh-package-lock.json5  oh-package.json5
.trae/documents/: 实现BaseControl控制类.md
AppScope/: app.json5
entry/: build-profile.json5
entry/src/main/: module.json5
entry/src/main/cpp/: BLoopBufData.cpp  BLoopBufData.h  CMakeLists.txt  CodeLock.cpp  CodeLock.h  LogUtils.h  LoopBuf.cpp  LoopBuf.h  NetProtocol.h  NetProtocol8610.h  NetProtocol8620.h  NetProtocol8810.h  UsbDataHeader.h  UsbLoopBufData.cpp  UsbLoopBufData.h  VideoDecoderNAPI.cpp  _872Stream.cpp  _872Stream.h  fh_loop_manager.cpp  fh_loop_manager.h  hmos_video_decoder.cpp  hmos_video_decoder.h  napi.h  native-lib.cpp  pthread.h  srt_receiver_manager.cpp  srt_receiver_manager.h  usb_loop_manager.cpp  usb_loop_manager.h
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/ets/Log/: LogManager.ets  LogUtils.ets  Logger.ets
entry/src/main/ets/SDK/: DeviceStatus.ets  VNDK.ts
entry/src/main/ets/base_map/: LngLat.ets
entry/src/main/ets/components/: CompassView.ets
entry/src/main/ets/connect/: BaseConnection.ets  HeartbeatTcpConnection.ets  StreamTcpConnection.ets  TcpConnection.ets  UdpConnection.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/helper/: FunctionHelper.ets  WifiCommandHelper.ets
entry/src/main/ets/hisi/: HisiCommandHelper.ets
entry/src/main/ets/libhello/: BloopBufData.d.ts
entry/src/main/ets/listeners/: AnalysisListener.ets  ConnectionStatusListener.ets  (+2 more)
entry/src/mock/: mock-config.json5
(+122 files in other folders)
